--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" Diseño Web • Aplicaciones • Soluciones TI • Product Design />
-    <title>Vite + React + TS</title>
+    <title>House of code</title>
   </head>
   <body>
     <div id="root"></div>
