--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="../HOCFront/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" Diseño Web • Aplicaciones • Soluciones TI • Product Design />
     <title>Home of code</title>
   </head>
